Add /ingress.yml (for my traefik ingress)

--- a/now.json
+++ b/now.json
@@ -1,4 +1,9 @@
 {
   "version": 2,
-  "routes": []
+  "routes": [
+    {
+      "src": "/ingress.yml",
+      "dest": "https://raw.githubusercontent.com/ondrejsika/kubernetes-ingress-traefik/master/ingress-traefik.yml"
+    }
+  ]
 }
