now.json - add /t/* for kuebrentes-training examples

--- a/now.json
+++ b/now.json
@@ -2,6 +2,10 @@
   "version": 2,
   "routes": [
     {
+      "src": "/t/(?<path>[a-zA-Z0-9._/-]+)",
+      "dest": "https://raw.githubusercontent.com/ondrejsika/kubernetes-training/master/$path"
+    },
+    {
       "src": "/rook-ceph-(?<major>\\d+).(?<minor>\\d+)/(?<path>[a-zA-Z0-9._/-]+)",
       "dest": "https://raw.githubusercontent.com/rook/rook/release-$major.$minor/cluster/examples/kubernetes/ceph/$path"
     },
